# CodeReviewer-Elevate-Your-Code-Quality-with-AI-Insights

./: README.md  backend_test.py  design_guidelines.json  pyproject.toml  setup.py
LLMIntegrations/llm/: chat.py
backend/: .env  server.py
backend/LLMIntegrations/: llm_chat.py  messages.py
backend/tests/: test_code.py
code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Navigation.js
frontend/src/pages/: AnalyzePage.js  HistoryPage.js  LandingPage.js  ResultsPage.js
test_reports/: iteration_1.json
